--- a/.env
+++ b/.env
@@ -19,3 +19,7 @@ APP_SECRET=0944802e25a69ac4c94f807ebece0cb2
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
+
+###> php-amqplib/rabbitmq-bundle ###
+RABBITMQ_URL=amqp://guest:guest@localhost:5672
+###< php-amqplib/rabbitmq-bundle ###
