--- a/config/packages/old_sound_rabbit_mq.yaml
+++ b/config/packages/old_sound_rabbit_mq.yaml
@@ -2,8 +2,10 @@ old_sound_rabbit_mq:
     connections:
         default:
             url: '%env(RABBITMQ_URL)%'
-            read_write_timeout: 4
-            heartbeat: 2
+            read_write_timeout: 60
+            heartbeat: 30
+            connection_timeout: 60
+            keepalive: false
     producers:
         messaging:
             class: App\Rabbit\MessagingProducer
