--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
       "ext-json": "*"
     },
     "require-dev": {
+        "symfony/web-server-bundle": "4.3.*"
     },
     "config": {
         "preferred-install": {
