--- a/.env
+++ b/.env
@@ -23,3 +23,15 @@ APP_SECRET=0944802e25a69ac4c94f807ebece0cb2
 ###> php-amqplib/rabbitmq-bundle ###
 RABBITMQ_URL=amqp://guest:guest@localhost:5672
 ###< php-amqplib/rabbitmq-bundle ###
+
+###> friendsofsymfony/elastica-bundle ###
+ELASTICSEARCH_URL=http://localhost:9200/
+###< friendsofsymfony/elastica-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+DATABASE_URL=mysql://root:@Admin2020@127.0.0.1:3306/rabbit_elastic
+###< doctrine/doctrine-bundle ###
